--- a/v407/content/auswertung.tex
+++ b/v407/content/auswertung.tex
@@ -9,35 +9,39 @@ berechnet werden kann. Die Fehlerrechnung der Messwerte genügt der gaußschen F
 
 \subsection{Bestimmung der Brechungsindizes über die Fresnelschen Formeln}
 \label{subsec:Index_Fresnel}
-Die Messwerte der gemessenen Ströme des Photoelements sind in \autoref{tab:Messwerte} aufgeführt. Eine Korrektur durch den Dunkelstrom kann vernachlässigt werden, da 
-Größenordnung des Dunkelstroms nicht signifikant im Vergleich zur allgemeinen Messunsicherheit dieses Versuches ist. 
+Die Messwerte der gemessenen Ströme des Photoelements sind in \autoref{tab:Messwerte} aufgeführt.
+Von den aufgeführten Strömen wird der gemessene Dunkelstrom von $I_\text{D} = \qty{62}{\nano\ampere}$ subtrahiert, auch wenn dies die Ergebnisse kaum beeinflusst, da 
+der Dunkelstrom um Größenordnungen unter den gemessenen Strömen liegt.
 
-Nun wird der Brechungsindex $n$ aus der p- und s-polarisierten Messreihe berechnet. 
-Dazu werden die fresnelschen Formeln für p-polarisiertes Licht \eqref{eqn:Fresnel_parallel} und für s-polarisiertes Licht \eqref{eqn:Fresnel_senkrecht} jeweils auf den 
-Brechungsinx umgestellt. Dabei wird ausgenutzt, dass die Intensität proportional zum quadrat der Amplitude ist. 
-Daher gilt $\frac{E_\text{r}}{E_\text{e}} = \sqrt{\frac{I_r}{I_0}} = E$. Mit dieser Bedingung kann man die Fresnel-Formeln für p-polarisiertes Licht 
-auf den Brechungsindex umformen. Der Brechungsindex $n_\text{p}$ wird durch 
+Es werden die Brechungsindizes $n_p$ und $n_s$ aus den Messreihen zum parallel- und senkrecht polarisierten Licht bestimmt.
+Dazu werden die Fresnelschen Formeln für p-polarisiertes Licht \eqref{eqn:Fresnel_parallel} und für s-polarisiertes Licht \eqref{eqn:Fresnel_senkrecht} jeweils auf den 
+Brechungsindex umgestellt. Dabei wird ausgenutzt, dass die Intensität des Lichtes proportional zum Quadrat der Amplitude des $\vec{E}$-Feldes ist. 
+Daher gilt $\frac{E_\text{r}}{E_\text{e}} = \sqrt{\frac{I_r}{I_0}} = E$. Mit dieser Konvention folgt nach Auflösen der Gleichung \eqref{eqn:Fresnel_parallel} nach $n$
 \begin{equation}
   \label{eqn:n_p}
-  n_\text{p} = \left(\frac{E + 1}{E - 1}\right)^2 \frac{1}{2\cos^2(\alpha)} + \sqrt{\frac{1}{4\cos^2(\alpha)}\left(\frac{E + 1}{E - 1}\right)^4 - \left(\frac{E + 1}{E - 1}\right)^2\tan^2(\alpha)}
+  n_\text{p}(\alpha, E) = \left(\frac{E + 1}{E - 1}\right)^2 \frac{1}{2\cos^2(\alpha)} + \sqrt{\frac{1}{4\cos^2(\alpha)}\left(\frac{E + 1}{E - 1}\right)^4 - \left(\frac{E + 1}{E - 1}\right)^2\tan^2(\alpha)}
 \end{equation}
-beschrieben. Nun wird verwendet, dass die Intensität $I_r, I_0$ auch proportional zur gemessenen Stromsärke ist. Daher gilt $E = \sqrt{\frac{I_p}{I_0}}$ für p-polarisiertes
-Licht, webei $I_p$ nun die gemessene Stromsärke beschreibt. Diese Bedingung gilt gleichermaßen für s-polarisiertes Licht. Die mit \autoref{eqn:n_p} berechneten Werte Brechungsindizes $n_\text{p}$
-werden in \autoref{tab:Messwerte} dargestllt. Der Mittelwert dieser Brechungsindizes lautet $\overline{n_\text{p}} = \num{3.98+-0.15}$.
+für den Brechungsindex in Abhänigkeit zum Winkel $\alpha$ und dem Quotienten der Intensitäten. 
+Nun wird verwendet, dass die Intensität $I_\text{r}, I_0$ auch proportional zur gemessenen Stromsärke ist. Daher gilt $E = \sqrt{\frac{I_\text{p}}{I_0}}$ für p-polarisiertes
+Licht, wobei $I_\text{p}$ die gemessene Stromsärke beschreibt. Diese Bedingung gilt gleichermaßen für s-polarisiertes Licht.
+Aus den Messwertepaaren der Winkel und Stromstärken $I_\text{p}$ können 
+Brechungsindizes $n_\text{p}$ berechnet werden. Diese
+werden in \autoref{tab:Messwerte} dargestllt. Der Mittelwert der Brechungsindizes ergibt sich zu $\overline{n_\text{p}} = \num{3.98+-0.15}$, wobei offensichtliche Ausreißer
+(hier: $n > \num{4.5}$) verworfen werden.
 
-Die fresnelsche Formel für s-polarisiertes Licht \eqref{eqn:Fresnel_senkrecht} wird ebenfalls auf den Brechungsindex $n_\text{s}$ umgestellt.
-Daher wird wird der Brechungsindex durch 
+Die Fresnelsche Formel für s-polarisiertes Licht \eqref{eqn:Fresnel_senkrecht} wird ebenfalls auf den Brechungsindex $n_\text{s}$ umgestellt.
+Hierbei ergibt sich 
 \begin{equation}
   \label{eqn:n_s}
-  n_\text{s} = \sqrt{\frac{1 + E^2 + 2E\cos(2\alpha)}{1 - 2E + E^2}}
+  n_\text{s}(\alpha, E) = \sqrt{\frac{1 + E^2 + 2E\cos(2\alpha)}{1 - 2E + E^2}}
 \end{equation}
-beschrieben. 
-Die durch \autoref{eqn:n_s} berechneten Brechungsindizes werden ebenfalls in \autoref{tab:Messwerte} dargestellt. Der daraus berechnete Mittelwert lautet
-$\overline{n_\text{p}} = \num{3.85+-0.30}$.
+für den Brechungsindex bei s-polarisiertem Licht. 
+Die durch \autoref{eqn:n_s} berechneten Brechungsindizes werden ebenfalls in \autoref{tab:Messwerte} dargestellt. Der Mittelwert lautet
+$\overline{n_\text{s}} = \num{3.85+-0.30}$. Wieder werden Ausreißer (hier: $n < 3$) nicht berücksichtigt.
 
 \begin{table}
   \centering
-  \caption{Messwerte der Ströme des Photoelements und daraus resultierende Brechungsindizes. Der Strom ohne Reflexion beträgt $I_0 = \qty{180}{\micro\ampere}$, der
+  \caption{Messwerte der Ströme des Photoelements und daraus resultierende Brechungsindizes. Der Strom des einfallenden Lichtbündels beträgt $I_0 = \qty{180}{\micro\ampere}$, der
   Dunkelstrom $I_\text{D} = \qty{62}{\nano\ampere}$. Die mit '*' markierten Werte werden in der Auswertung dieses Versuches nicht einbezogen.}
   \label{tab:Messwerte}
   \begin{longtable}{S[table-format = 2.0] | c S[table-format = 3.2] | c S[table-format = 1.2]}
@@ -96,17 +100,20 @@ $\overline{n_\text{p}} = \num{3.85+-0.30}$.
   \end{longtable}
 \end{table}
 
-\subsection{Bestimmung des Brechungsindizes mittels des Brewsterwinkels}
+\subsection{Bestimmung des Brechungsindizes über den Brewsterwinkel}
 \label{subsec:Brewsterwinkel}
-Der experimentell bestimmte Brewsterwinkel $\alpha_\text{p}$ kann den Messwerten in \autoref{tab:Messwerte} entnommen werden. Dabei kann lediglich der Messwert mit der 
-niedrigsten Stromstärke als Brewsterwinkel angenommen werden, da keine detailiertere Messung der Winkel möglich war.
-Daher lautet der beste Messwert des Brewsterwinkels $\alpha_\text{p} = \qty{75}{\degree}$.
-Mit Hilfe von \autoref{eqn:Brewster} kann der Brechungsindex berechnet werden. Dieser ergibt sich zu $n_{\alpha_{\text{p}}} = \num{3.73}$.
+Der Brewsterwinkel stellt im Idealfall den Winkel der gemessenen Intensität $I_\text{B} = 0$ dar. Da immer ein gewisser Reststrom gemessen wurde,
+wird das Minimum der Messwerte $I_\text{p}$ aus \autoref{tab:Messwerte} festgestellt.
+Es folgt der experimentelle Wert des Brewsterwinkels $\alpha_\text{B} = \qty{75}{\degree}$.
+Mithilfe von \autoref{eqn:Brewster} kann ein hierraus resultierender Brechungsindex berechnet werden. Dieser ergibt sich zu $n_{\alpha_{\text{p}}} = \num{3.73}$.
+
+\autoref{fig:plot} zeigt den Verlauf der Messwerte und die zugehörigen Theoriekurven, welche durch Einsetzen der Mittelwerte der Brechungsindizes für p- und 
+s-polarisiertes Licht in die Gleichungen \eqref{eqn:Fresnel_parallel} und \eqref{eqn:Fresnel_senkrecht} folgen.
 
 \begin{figure}
   \centering
   \includegraphics{plot.pdf}
-  \caption{In dieser Abbildung sind die Messwerte, sowie die dazugehörigen Theoriekurven von p- und s-polarisiertem Licht dargestellt.}
+  \caption{Messpunkte und zugehörige, aus $\overline{n}$ folgende Theoriekurven. Erstellt mit \textit{matplotlib} \cite{matplotlib}.}
   \label{fig:plot}
 \end{figure}
 
