--- a/v407/content/diskussion.tex
+++ b/v407/content/diskussion.tex
@@ -1,27 +1,32 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-
-In diesem Versuch wurde wurde der Brechungsindex eines Silizium-Spiegels mit einem Aufbau, welcher im Abschnitt \ref{sec:Durchführung} beschrieben wurde, bestimmt. 
-Dies ist über drei Methode geschehen. Die errechneten Brechungsindizes wreden in \autoref{tab:Indizes_dis} erneut dargestellt. Außerdem wird ein Literaturwert für einen idealen
-Silizium-Spiegel angegeben. Nach Betrachtung der Tabelle fällt auf, dass die berechneten Brechungsindizes alle in der Größenordnung des Literaturwertes liegen, allerdings 
-weichen sie jeweils um einen nicht vernachlässigbaren Wert vom Literaturwert ab. Dies liegt vermutlich an dem verwendetem Spiegel. Der Literaturwert gilt lediglich für 
-einen perfekten Silizium-Spiegel, was der verwendete Spiegel nicht ist. Durch Verunreinigung, Abnutzung und weitere äußere Effekte liegen keine idealen Bedingung vor, 
-weshalb eine Abweichung vom Literaturwert zu erwarten war. Aus diesem Grund wird auf die Berechnung der Abweichungen verzichtet, denn diese träfen keine Aussagen über die
-Qualität der Messmethode, sondern demonstrieren lediglich die im imperfekten Bedingung der Messung. Allerdings fließt in die Abweichung der Werte ebenfalls mit ein, dass alle
-Einstellungen der Messapparatur händisch vorgenommen wurden, weshalb gleiche Bedingungen bei jeder Messung nicht gewährleistet werden können. 
-
-Wie bereits diskutiert ist der Literaturwert des Brechungsindizes nicht aussagekräftig für die realen Materialien des Versuches. Daher ist anzunehmen, dass die berechneten 
-Wert die realen Bedingungen, im Rahmen der allgemeinen Messunsicherheit, relativ gut beschreiben.
+Ziel des Versuches war die Bestimmung des Brechungsindizes eines Silizium-Spiegels bei der Wellelänge des verwendeten (roten) Lasers. 
+Der gesuchte Brechungsindex wurde aus Messreihen zu parallel- und senkrecht polarisiertem Licht und über Bestimmung des Brewsterwinkels ermittelt.
+Die Ergebnisse der errechneten Brechungsindizes werden in \autoref{tab:Indizes_dis} dargestellt. 
 
 \begin{table}
-    \centering
-    \caption{In dieser Tabelle werden die einzelnen berechneten Brechungsindizes dargestellt.}
-    \label{tab:Indizes_dis}
-    \begin{tabular}{c c c c}
-      \toprule
-        {$n_\text{p}$} & {$n_\text{s}$} & {$n_{\alpha_\text{p}}$} & {$n_\text{Lit}$} \\
-        \midrule
-        $3.98 \pm 0.15$ & $3.85 \pm 0.30$ & 3.73 & 3.35 \\
-      \bottomrule
-    \end{tabular}
-  \end{table}
+  \centering
+  \caption{Experimentell ermittelte Brechungsindizes von Silizium.}
+  \label{tab:Indizes_dis}
+  \begin{tabular}{c c c}
+    \toprule
+      {$\overline{n}_\text{p}$} & {$\overline{n}_\text{s}$} & {$n_{\alpha_\text{B}}$} \\
+      \midrule
+      $3.98 \pm 0.15$ & $3.85 \pm 0.30$ & 3.73 \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+Die aus den verschiedenen Methoden resultierenden Brechungsindizes liegen alle in einem relativ kleinen Bereich von $\num{3.7}$ bis ca. $4$. 
+Auf Grund der aus dem Standardfehler des Mittelwertes
+resultierenden Unsicherheiten stehen die verschiedenen Werte nicht im Widerspruch zueinander, was zeigt, dass die verschiedenen Bestimmungsmethoden
+zu gleichwertigen Ergebnissen führen.
+Beim Vergleich der Werte mit Literaturwerten des Brechungsindizes von Silizium bei Wellenlängen im roten Bereich, bestätigt sich die Qualität dieser. Auch der Literaturwert 
+ist bei Wellenlängen zwischen $\num{600}$ und $\qty{700}{\nano\metre}$ in einem Bereich von ca. $\num{3.7}$ bis $4$ zu verorten.
+
+Ungenauigkeiten bei der Einstellung der Messapparatur und beim Ablesen der Messwerte führen zu den relativ großen Messunsicherheiten der Werte. Beispielsweise war eine exakte
+Ausrichtung des Photoelements sehr schwierig umzusetzen. Des Weiteren können sich äußere Einflüsse wie Licht- und Schattenänderungen auf die Messwerte auswirken.
+Dies erklärt die in \autoref{fig:plot} sichtbaren Fluktuationen der Messpunkte um die Theoriekurven.
+
+Insgesamt ist das Ziel, die Fresenelschen Formeln experimentell zu Verifizieren und den Brechungsindex von Silizium zu bestimmen, mit einer im Rahmen der Messunsicherheiten
+guten Präzision erreicht worden
