theorie is net mehr so viel bre xD

--- a/lit.bib
+++ b/lit.bib
@@ -160,3 +160,10 @@
 	urldate      = {2022-05-24},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977241/mod_resource/content/2/V407.pdf},
 }
+
+@online{v704,
+	title        = {704 - Absorption von Gamma- und Beta-Strahlung},
+	organization = {TU Dortmund},
+	urldate      = {2022-05-31},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/2005007/mod_resource/content/2/V704.pdf},
+}
