nur sicherheitspush is net viel aber ka xD

--- a/v704/content/theorie.tex
+++ b/v704/content/theorie.tex
@@ -106,4 +106,11 @@ beschrieben. Hier beschreibt $I$ die Ionisationsenergie des Absorbermaterials.
 \subsection{Wirkungsquerschnitt}
 \label{subsec:Wirkungsquerschnitt}
 Wie bisher beschrieben treten verschiedene Wechselwirkungen beim Eintreten von Strahlung in Materie auf. Die Häufigkeit dieser Wechselwirkungen pro Teilchen und pro Fläch
-wird Wirkungsquerschnitt $\sigma$ genannt.
+wird Wirkungsquerschnitt $\sigma$ genannt. 
+Für einen \textit{vereinfachten} Absorber der Dicke $D$ mit einer Querschnittsfläche $F$ und n Teilchen pro Volumeneinheit kann der Wirkungsquerschnitt für ein eintreffendes
+Teilchen gemäß 
+\begin{equation*}
+    \sigma = \frac{W}{nD},
+\end{equation*}
+mit der Wahrscheinlichkeit einer Wechselwirkung $W$, berechnet werden. Bei einem \textit{vereinfachter} Absorber würden die einzelnen Atome einander in Strahlungsrichtung nicht
+überdecken. Da diese Annahme allerdings sehr realitätsfern ist, wird nun eine allgemeinere Form für den Wirkungsquerschnitt benötigt.  
