--- a/v704/content/durchfuehrung.tex
+++ b/v704/content/durchfuehrung.tex
@@ -1,2 +1,8 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = .7\textwidth]{content/Aufbau.png}
+    \label{fig:Aufbau}
+\end{figure}
