--- a/v704/v704.tex
+++ b/v704/v704.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
 \subject{V704}
-\title{Absorption von Gamma- und Beta-Strahlung}
+\title{\texorpdfstring{Absorption von $\beta$- und $\gamma$-Strahlung}{Absorption von Beta- und Gamma-Strahlung}}
 \date{%
   Durchführung: 31.05.2022
   \hspace{3em}
