--- a/v704/content/auswertung.tex
+++ b/v704/content/auswertung.tex
@@ -1,12 +1,58 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+Die Fehlerrechnung dieses Kapitels genügt der gaußschen Fehlerfortpflanzung
+\begin{equation*}
+  \label{eqn:Gauss}
+  \Delta F = \sqrt{\sum_i\left(\frac{\symup{d}F}{\symup{d}y_i}\Delta y_i \right)^2}.
+\end{equation*}
+Die Standardfehler des Mittelwertes ergeben sich nach
+\begin{equation*}
+  \label{eqn:MW-Fehler}
+  \sigma(x) = \sqrt{\frac{1}{n(n-1)} \sum_i (x_i - \overline{x})^2}.
+\end{equation*}
+Die Fehlerrechnung wird in \textit{Python} unter Verwendung des Paketes \textit{uncertainties} \cite{uncertainties} durchgeführt.
+
+\subsection{Schöner Titel noch iwas mit gamma Strahlung oder so}
+Zur Bestimmung der Absorptionskoeffizienten von Blei und Zink werden die Messwerte aus \autoref{tab:Mess_gamma} verwendet. Die Zählraten des \textit{GMZ} folgen einer
+Poissoin-Verteilung, weshalb sich die Unsicherheit der Messwerte $N$ als $\symup{\Delta}N = \sqrt{N}$ annehmen lässt.
+
+\begin{table}
+  \centering
+  \caption{Messwerte der Absorption von $\gamma$-Strahlung eines Cäsium-137-Strahlers. Es werden Blei und Zink als Absorber verwendet. $d$ beschreibt die Dicke der Absorberschicht und
+  $N$ die Zählraten des \textit{GMZ} während der Zeit$t$.}
+  \label{tab:Mess_gamma}
+  \begin{tabular}{S[table-format = 2.1] S[table-format = 5.0] S[table-format = 3.0] | S[table-format = 2.0] S[table-format = 5.0] S[table-format = 3.0]}
+    \toprule
+    \multicolumn{3}{c}{Blei} & \multicolumn{3}{c}{Zink} \\
+      \midrule
+      {$d \mathbin{/} \unit{\milli\metre}$} & {$N$} & {$t \mathbin{/} \unit{\second}$} & {$d \mathbin{/} \unit{\milli\metre}$} & {$N$} & {$t \mathbin{/} \unit{\second}$} \\
+      \midrule
+       0   &  3081 &  30 &  0 &  3081 &  30 \\
+       1.2 & 10470 & 100 &  2 & 10602 & 100 \\
+       2.4 &  9246 & 100 &  4 &  9766 & 100 \\
+       4.7 &  7415 & 100 &  6 &  8812 & 100 \\
+       7.4 &  6229 & 100 &  8 &  8462 & 100 \\
+      10.3 &  6297 & 150 & 10 &  8034 & 100 \\
+      13.8 &  4481 & 150 & 12 &  7018 & 100 \\
+      17.7 &  3532 & 150 & 14 &  6549 & 100 \\
+      20.0 &  2460 & 150 & 16 &  5925 & 100 \\
+      30.3 &  1141 & 150 & 18 &  5727 & 100 \\
+      40.8 &   892 & 200 & 20 &  5020 & 100 \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
 
 \begin{figure}
   \centering
-  \includegraphics{plot.pdf}
+  \includegraphics{gamma.pdf}
   \caption{Plot.}
-  \label{fig:plot}
+  \label{fig:gamma}
 \end{figure}
 
-
-Siehe \autoref{fig:plot}!
+\begin{figure}
+  \centering
+  \includegraphics{beta.pdf}
+  \caption{Plot.}
+  \label{fig:beta}
+\end{figure}
